# rumor_spreading

./: CMakeLists.txt  LICENSE  README.md  read_graph.cpp  sample_graph.txt  simulate.cpp
include/: alphas_strategies.h  common.h  duration.h  graph.h  models.h
